# f723usbhs

./: .gitignore  CMakeLists.txt  NewFolder.ioc  STM32F723ZETx_FLASH.ld
Core/Inc/: main.h  stm32f7xx_it.h
Core/Src/: main.c  stm32f7xx_it.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
